fix typo in README

--- a/uudisks/README
+++ b/uudisks/README
@@ -4,4 +4,4 @@ Usage:
 	ulm:
 		List devices mounted by current user, or all mounted devices if the program is run as root
 	uld [-d] <device-path> :
-		Unmount speacified device, and, if -d is speacified, detached it.
+		Unmount speacified device, and, if -d is speacified, detach it.
